--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "socket.io-client": "^4.6.1",
-    "recharts": "^2.12.0"
+    "recharts": "^2.15.4",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
