--- a/server/package.json
+++ b/server/package.json
@@ -20,14 +20,14 @@
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
     "cors": "^2.8.5",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
+    "uuid": "^9.0.1",
+    "typescript": "^5.3.3",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/node": "^20.11.0",
-    "@types/uuid": "^9.0.7",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "@types/uuid": "^9.0.7"
+  },
+  "devDependencies": {
+    "tsx": "^4.7.0"
   }
 }
