--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "planitpoker-server",
+  "name": "showdown-server",
   "version": "1.0.0",
-  "description": "Backend server for PlanitPoker",
+  "description": "Backend server for Showdown",
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
